Atualiza CsvReader para tratamento de erros